--- a/OpenSky.Client/Pages/MyFleet.xaml
+++ b/OpenSky.Client/Pages/MyFleet.xaml
@@ -27,13 +27,14 @@
                       Loaded="MyFleetOnLoaded"
                       d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
-        <models:MyFleetViewModel />
+        <models:MyFleetViewModel x:Name="ViewModel" />
     </UserControl.DataContext>
     <UserControl.InputBindings>
         <KeyBinding Key="F5" Command="{Binding RefreshFleetCommand}" />
     </UserControl.InputBindings>
     <UserControl.Resources>
         <converters:VisibilityInverterConverter x:Key="VisibilityInverterConverter" />
+        <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
         <CollectionViewSource Source="{Binding Aircraft}" x:Key="AircraftViewSource">
             <CollectionViewSource.SortDescriptions>
                 <componentModel:SortDescription PropertyName="Registry" Direction="Ascending" />
@@ -43,6 +44,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <GroupBox Grid.Column="0">
@@ -58,6 +60,11 @@
                     <ui:CommandBar.PrimaryCommands>
                         <ui:AppBarButton Icon="Refresh" Label="Refresh" ToolTip="Refresh my fleet [F5]" Command="{Binding RefreshFleetCommand}" />
                         <ui:AppBarButton Icon="Edit" Label="Edit" ToolTip="Edit the selected aircraft" Command="{Binding StartEditAircraftCommand}" />
+                        <ui:AppBarButton Label="Ground operations" ToolTip="Edit the selected aircraft" Command="{Binding StartGroundOperationsCommand}">
+                            <ui:AppBarButton.Icon>
+                                <ui:FontIcon Glyph="&#xF158;" />
+                            </ui:AppBarButton.Icon>
+                        </ui:AppBarButton>
                         <ui:AppBarButton Label="Plan flight" ToolTip="Plan a flight for the selected aircraft" Command="{Binding PlanFlightCommand}">
                             <ui:AppBarButton.Icon>
                                 <ui:BitmapIcon UriSource="/Resources/plan16.png" Width="16" Height="16" ShowAsMonochrome="True" />
@@ -91,6 +98,7 @@
                         <DataGridTextColumn Header="Type" Binding="{Binding Type.Name}" />
                         <DataGridTextColumn Header="Status" Binding="{Binding Status}" />
                         <DataGridTemplateColumn Header="Fuel" CellTemplate="{StaticResource FuelCellTemplate}" SortMemberPath="Fuel" CanUserSort="True" />
+                        <DataGridTextColumn Header="Payload loaded" Binding="{Binding TotalPayloadWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" />
                         <DataGridTextColumn Header="Condition(todo)" />
                         <DataGridTemplateColumn Header="Purchase Price" CellTemplate="{StaticResource PurchasePriceCellTemplate}" SortMemberPath="PurchasePrice" CanUserSort="True" />
                         <DataGridTemplateColumn Header="Rental Price" CellTemplate="{StaticResource RentPriceCellTemplate}" SortMemberPath="RentPrice" CanUserSort="True" />
@@ -145,6 +153,117 @@
                     </Grid.ColumnDefinitions>
                     <Button Grid.Column="0" HorizontalAlignment="Stretch" Margin="0,10,5,0" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding SaveEditedAircraftCommand}">Save aircraft</Button>
                     <Button Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,10,0,0" Command="{Binding CancelEditAircraftCommand}">Cancel</Button>
+                </Grid>
+            </Grid>
+        </GroupBox>
+        <GroupBox Grid.Column="2" Visibility="{Binding GroundOperationsVisibility}" tools:VisibilityAnimation.AnimationType="SlideFromRight">
+            <GroupBox.Header>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock FontSize="15" FontWeight="DemiBold">Ground operations:</TextBlock>
+                    <TextBlock FontSize="15" FontWeight="DemiBold" Text="{Binding GroundOperations.Registry}" Margin="5,0,0,0" />
+                    <Button Padding="0" MinHeight="20" MaxHeight="20" Margin="5,0,0,0" Command="{Binding CancelGroundOperationsCommand}">✖</Button>
+                </StackPanel>
+            </GroupBox.Header>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="1*" MinHeight="200" />
+                    <RowDefinition Height="1*" MinHeight="200" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <GroupBox Grid.Row="0">
+                    <GroupBox.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontSize="12" FontWeight="DemiBold">Fuel</TextBlock>
+                        </StackPanel>
+                    </GroupBox.Header>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5,0">
+                            <TextBlock VerticalAlignment="Center">Load</TextBlock>
+                            <TextBox Margin="5,0" Text="{Binding GroundOperations.Fuel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=fuel|N1|false}" />
+                            <TextBlock VerticalAlignment="Center" Margin="0,0,5,0">, maximum is</TextBlock>
+                            <TextBlock VerticalAlignment="Center" Text="{Binding GroundOperationsMaxFuel, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=fuel|N1|true}" />
+                        </StackPanel>
+                        <Slider Grid.Row="1" TickFrequency="0.5" IsSnapToTickEnabled="True" HorizontalAlignment="Stretch" Margin="5,0" Value="{Binding GroundOperations.Fuel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Maximum="{Binding GroundOperationsMaxFuel, Mode=OneWay}" />
+                    </Grid>
+                </GroupBox>
+                <GroupBox Grid.Row="1">
+                    <GroupBox.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontSize="12" FontWeight="DemiBold">Aircraft payloads</TextBlock>
+                        </StackPanel>
+                    </GroupBox.Header>
+                    <ListBox Margin="5,0" ItemsSource="{Binding AircraftPayloads}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate DataType="openSkyApi:Payload">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <controls:ListContainsValueCheckbox List="{Binding ElementName=ViewModel, Path=Payloads}" Value="{Binding Id}" Grid.Column="0" />
+                                    <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center">
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding Weight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" FontSize="11" />
+                                            <TextBlock Text="{Binding Description}" Margin="5,0,0,0" FontSize="11" />
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock FontSize="11">Destination:</TextBlock>
+                                            <TextBlock Text="{Binding DestinationICAO}" FontFamily="Consolas" FontSize="12" Margin="5,0" />
+                                            <TextBlock FontSize="11">Current location:</TextBlock>
+                                            <TextBlock Text="{Binding AircraftRegistry}" FontFamily="Consolas" FontSize="12" Margin="5,0" />
+                                        </StackPanel>
+                                    </StackPanel>
+                                </Grid>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </GroupBox>
+                <GroupBox Grid.Row="2">
+                    <GroupBox.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontSize="12" FontWeight="DemiBold">Airport payloads</TextBlock>
+                        </StackPanel>
+                    </GroupBox.Header>
+                    <ListBox Margin="5,0" ItemsSource="{Binding AirportPayloads}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate DataType="openSkyApi:PlannablePayload">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <controls:ListContainsValueCheckbox List="{Binding ElementName=ViewModel, Path=Payloads}" Value="{Binding Id}" Grid.Column="0" />
+                                    <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center">
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding Weight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" FontSize="11" />
+                                            <TextBlock Text="{Binding Description}" Margin="5,0,0,0" FontSize="11" />
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock FontSize="11">Destination:</TextBlock>
+                                            <TextBlock Text="{Binding DestinationICAO}" FontFamily="Consolas" FontSize="12" Margin="5,0" />
+                                            <TextBlock FontSize="11">Current location:</TextBlock>
+                                            <TextBlock Text="{Binding CurrentLocation}" FontFamily="Consolas" FontSize="12" Margin="5,0" />
+                                        </StackPanel>
+                                    </StackPanel>
+                                </Grid>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </GroupBox>
+                <Grid Grid.Row="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0" HorizontalAlignment="Stretch" Margin="0,10,5,0" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding SubmitGroundOperationsCommand}">Start operations</Button>
+                    <Button Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,10,0,0" Command="{Binding CancelGroundOperationsCommand}">Cancel</Button>
                 </Grid>
             </Grid>
         </GroupBox>
